CSS/index.scss
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  padding: 20px;
  background-color: #b2bec3;
  .container-xxl {
    background-color: #ecf0f1;
    border-radius: 10px;
    box-shadow: 5px 5px 15px black;
    padding: 10px 10px;
    .row {
      .col-md-4 {
        padding: 10px;
        .form-floating {
          input {
            width: 300px;
            height: 50px;
            box-shadow: 1px 1px 5px 2px #34495e;
            background-color: inherit;
            border: 5px inset #bdc3c7;
            border-radius: 30px;
          }
          input[type="number"]::-webkit-inner-spin-button {
            -webkit-appearance: none;
          }
          label {
            font-size: 14px;
            opacity: 0.8;
          }
        }
      }
      .col-md-2 {
        @extend .col-md-4;
        @media screen and (max-width: 640px) {
          padding: 10px;
        }
      }
    }
    .container-fluid {
      padding: 10px;
      .btn-primary {
        box-shadow: 3px 3px 20px 1px black;
        border-radius: 60%;
        background-color: #ecf0f1;
        border: 1px outset #7f8c8d;
        color: black;
      }
      .btn-danger {
        @extend .btn-primary;
      }
      .btn-success {
        @extend .btn-primary;
        visibility: hidden;
        animation-duration: 1s;
        transition: 1s;
      }
    }
  }
}

